# logos-chat-ui

./: CMakeLists.txt  Chat.qml  ChatUIComponent.cpp  ChatUIComponent.h  README.md  flake.nix  metadata.json
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  resources.qrc
components/: ConversationList.qml  IdentityPanel.qml  InputBar.qml  MessageView.qml
docs/: spec.md
nix/: app.nix  default.nix  lib.nix
src/: ChatBackend.cpp  ChatBackend.h  ChatBackend.rep  ChatConfig.h  ChatPlugin.cpp  ChatPlugin.h  ChatSDKWindow.cpp  ChatSDKWindow.h  ChatView.qml  ChatWidget.cpp  ChatWidget.h  ChatWindow.cpp  ChatWindow.h  ConversationListModel.cpp  ConversationListModel.h  ConversationListPanel.cpp  ConversationListPanel.h  MessageListModel.cpp  MessageListModel.h  chat_resources.qrc  chat_ui_interface.h  chat_ui_plugin.cpp  chat_ui_plugin.h
src/qml/: ChatView.qml
